Update payment by order id
